# chim

./: Cargo.toml  README.md  build.ps1  build.sh  chim教育价值分析报告.md  chim设计理念.md  chim语法规范.md  fmt.ps1  fmt.sh  test.ps1  test.sh  编译器完善实施计划.md  编译器实现差距分析报告.md  项目完成总结.md
bootstrap/: BOOTSTRAP_PROGRESS.md  mini_compiler.chim  simple.chim  stage1_plan.chim
build_chym/: run_chym.py  内核入口.py
chim_compiler/: Cargo.toml  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  TileLang介绍.md  test.cs  test.java  test.js  test.kt  test.m  test.nim  test.rs  test.swift  test.ts  test.v  test_8cc.c  test_all_backends.ps1  test_all_backends.sh  test_backends..tile  test_backends.c  test_backends.chim  test_backends.cpp  test_backends.sh  test_backends.wat  test_chibicc.c  test_complete..cu  test_complete..mojo  test_complete..tile  test_complete.c  test_complete.chim  test_complete.clif  test_complete.cpp  test_complete.java  test_complete.js  test_complete.kt  test_complete.ll  test_complete.rs  test_complete.s  test_complete.ssa  test_complete.swift  test_complete.ts  (+19 more)
chim_compiler/examples/: optimization_demo.rs  optimization_test.chim  radix_pool_benchmark.rs
chim_compiler/src/: actor.rs  allocation.rs  ast.rs  async_runtime.rs  backend.rs  codegen.rs  const_fn.rs  content_addressable.rs  ctfe.rs  ctfe_tests.rs  ecs.rs  effect.rs  ffi.rs  group_manager.rs  i18n.rs  ir.rs  json.rs  lexer.rs  lib.rs  main.rs  memory_layout.rs  optimizer.rs  parser.rs  pattern.rs  procedural_macros.rs  radix_pool.rs  rand.rs  rvo.rs  semantic.rs  sized.rs  sync.rs  termination.rs  thread_local.rs  toml.rs  toon.rs  wasm_codegen.rs  xml.rs  xox.rs  yaml.rs
chim_compiler/src/backends/: agda.rs  asm.rs  batch_note.txt  cc8.rs  cc9.rs  chibicc.rs  clang.rs  compcert.rs  cone.rs  cpp.rs  cranelift.rs  cranelift_machine.rs  crystal.rs  csharp.rs  cuda.rs  d.rs  delphi.rs  erlang.rs  flang.rs  fortran.rs  fsharp.rs  gcc.rs  gleam.rs  go.rs  java.rs  javascript.rs  julia.rs  june.rs  kotlin.rs  lcc.rs  llvm.rs  llvm_machine.rs  matlab.rs  metal.rs  mod.rs  mojo.rs  mold_linker.rs  moonbit.rs  msvc.rs  native.rs  (+23 more)
chim_compiler/src/stdlib/: collections.rs  conv.rs  ecosystem.rs  error.rs  fmt.rs  fs.rs  generics.rs  io.rs  math.rs  mod.rs  module.rs  net.rs  path.rs  prelude.rs  regex.rs  serde.rs  string.rs  time.rs  types.rs
chim_std/: Cargo.toml
compiler/: codegen.py  ffi.py  lexer.py  main.py  parser_.py  semantic.py  zig_codegen.py
compiler-rs/: Cargo.toml
compiler-rs/src/: grammar.pest  lexer.rs  lib.rs  parser.rs
crates/chim/: Cargo.toml
crates/chim/src/: main.rs
cy/: Cargo.toml  README.md
cy/examples/: example_package.chim
cy/src/: config.rs  dependency.rs  main.rs  store.rs  utils.rs
cy/src/commands/: add.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  prune.rs  remove.rs  update.rs
docs/: POINTER_ASM_IO_实现说明.md  RADIX_POOL_PERFORMANCE.md  新增后端总结.md  编译器完善实施计划.md  编译器实现差距分析报告.md  自举可行性分析报告.md  项目完成总结.md
examples/: array_map_example.chim  array_operations.chim  chan_example.chim  chymde_demo.chim  chymde_test.chim  compat_if_example.chim  complete_number_systems.chim  defer_example.chim  dynamic_dispatch_example.chim  fn_params_example.chim  group_example.chim  hello.chim  match_example.chim  memory_example.chim  number_systems.chim  package_dsl_example.chim  raw_buffer_example.chim  simple_loop.chim  ternary.chim  ultra_simple.chim
(+196 files in other folders)
