[package]
name = "chim_compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "chim_compiler"
path = "src/lib.rs"

[[bin]]
name = "chim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
thiserror = "1.0.49"