[package]
name = "chim_compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "chim_compiler"
path = "src/lib.rs"

[[bin]]
name = "chim"
path = "src/main.rs"

[dependencies]
logos = "0.14.0"
thiserror = { workspace = true }
num_cpus = "1"

# 可选：使用 workspace 中的其他 crate
# chim-lexer = { path = "../crates/chim-lexer" }
# chim-parser = { path = "../crates/chim-parser" }
