[package]
name = "cy"
version = "0.1.0"
edition = "2021"
authors = ["Chim Team"]
description = "cy - Chim编程语言的包管理器，采用类似pnpm的硬链接机制"

[[bin]]
name = "cy"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
indicatif = "0.17"
colored = "2.1"
dirs = "5.0"
